tests/toylang/neg/000754_mutation.toylang
program a = { a = 0 else; } .
